load("@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner/testing:macros.bzl", "spanner_emulator_test")

spanner_emulator_test(
    name = "MiniWorkflowTest",
    size = "small",
    srcs = glob(["MiniWorkflowTest.kt"]),
    resources = ["//src/test/kotlin/org/wfanet/panelmatch/integration/config"],
    test_class = "org.wfanet.panelmatch.integration.MiniWorkflowTest",
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/integration",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/org/junit",
    ],
)

spanner_emulator_test(
    name = "SingleStepTest",
    size = "small",
    srcs = glob(["SingleStepTest.kt"]),
    data = [
        "//src/main/kotlin/org/wfanet/panelmatch/integration/fixtures/edp",
        "//src/main/kotlin/org/wfanet/panelmatch/integration/fixtures/mp",
        "//src/main/kotlin/org/wfanet/panelmatch/integration/fixtures/shared",
    ],
    resources = ["//src/test/kotlin/org/wfanet/panelmatch/integration/config"],
    test_class = "org.wfanet.panelmatch.integration.SingleStepTest",
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/integration",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/org/junit",
    ],
)

spanner_emulator_test(
    name = "DoubleBlindWorkflowTest",
    size = "small",
    srcs = glob(["DoubleBlindWorkflowTest.kt"]),
    resources = ["//src/test/kotlin/org/wfanet/panelmatch/integration/config"],
    test_class = "org.wfanet.panelmatch.integration.DoubleBlindWorkflowTest",
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/integration",
        "//src/main/proto/wfa/panelmatch/client/exchangetasks:join_key_exchange_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/org/junit",
    ],
)

spanner_emulator_test(
    name = "FullWorkflowTest",
    size = "medium",
    srcs = glob(["FullWorkflowTest.kt"]),
    resources = ["//src/test/kotlin/org/wfanet/panelmatch/integration/config"],
    test_class = "org.wfanet.panelmatch.integration.FullWorkflowTest",
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/client/common",
        "//src/main/kotlin/org/wfanet/panelmatch/client/eventpreprocessing",
        "//src/main/kotlin/org/wfanet/panelmatch/integration",
        "//src/main/proto/wfa/panelmatch/client/eventpreprocessing:preprocess_events_kt_jvm_proto",
        "//src/main/proto/wfa/panelmatch/client/exchangetasks:join_key_exchange_kt_jvm_proto",
        "//src/main/proto/wfa/panelmatch/client/privatemembership:database_kt_jvm_proto",
        "//src/main/proto/wfa/panelmatch/common/compression:compression_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/common/truth",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/org/junit",
    ],
)
