load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/panelmatch:__subpackages__",
    "//src/test/kotlin/org/wfanet/panelmatch:__subpackages__",
])

kt_jvm_library(
    name = "batchlookup",
    srcs = glob(["*.kt"]),
    deps = [
        "//imports/java/com/google/common:guava",
        "//imports/java/org/apache/beam:core",
        "//imports/java/org/apache/beam/extensions:protobuf",
        "//src/main/kotlin/org/wfanet/panelmatch/common",
        "//src/main/kotlin/org/wfanet/panelmatch/common/beam",
        "//src/main/kotlin/org/wfanet/panelmatch/common/crypto:hashing",
        "//src/main/proto/wfa/panelmatch/client/batchlookup:database_java_proto",
        "//src/main/proto/wfa/panelmatch/client/batchlookup:oblivious_query_java_proto",
        "//src/main/proto/wfa/panelmatch/client/batchlookup:query_evaluator_java_proto",
        "//src/main/swig/wfanet/panelmatch/client/batchlookup/querybuilder:oblivious_query",
        "//src/main/swig/wfanet/panelmatch/client/batchlookup/queryevaluator:query_evaluator",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
    ],
)
