load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "eventpreprocessing",
    srcs = glob(["*.kt"]),
    deps = [
        "//imports/java/com/google/api/client:http",
        "//imports/java/com/google/api/client:json",
        "//imports/java/com/google/api/services:cloud_bigquery",
        "//imports/java/com/google/api/services:cloud_bigquerystorage",
        "//imports/java/com/google/api/services:services_bigquery",
        "//imports/java/org/apache/beam:core",
        "//imports/java/org/apache/beam/extensions:gcp_core",
        "//imports/java/org/apache/beam/extensions:protobuf",
        "//imports/java/org/apache/beam/io:google_cloud_platform",
        "//imports/java/org/apache/beam/runners:google_cloud_dataflow",
        "//imports/java/org/joda",
        "//src/main/kotlin/org/wfanet/panelmatch/common",
        "//src/main/kotlin/org/wfanet/panelmatch/common/beam",
        "//src/main/proto/wfa/panelmatch/client/eventpreprocessing:preprocess_events_java_proto",
        "//src/main/swig/wfanet/panelmatch/client/eventpreprocessing:preprocess_events",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
    ],
)
