load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("@wfa_measurement_system//build:defs.bzl", "test_target")

package(default_visibility = [
    test_target(":__subpackages__"),
])

kt_jvm_library(
    name = "dataprovidertasks",
    srcs = [
        "DataProviderTasks.kt",
    ],
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks",
        "//src/main/kotlin/org/wfanet/panelmatch/protocol/common:commutativeencryption",
    ],
)

kt_jvm_library(
    name = "modelprovidertasks",
    srcs = [
        "ModelProviderTasks.kt",
    ],
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/client/exchangetasks",
        "//src/main/kotlin/org/wfanet/panelmatch/protocol/common:commutativeencryption",
    ],
)

kt_jvm_library(
    name = "exchangetasks",
    srcs = [
        "ExchangeTask.kt",
    ],
    deps = [
        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_kt_jvm_grpc",
        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_steps_service_kt_jvm_grpc",
    ],
)
