load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "exchangetasks",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/main/kotlin/org/wfanet/panelmatch/client/storage",
        "//src/main/kotlin/org/wfanet/panelmatch/client/utils",
        "//src/main/kotlin/org/wfanet/panelmatch/protocol/common",
        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_step_attempts_service_kt_jvm_grpc",
        "//src/main/proto/wfa/measurement/api/v2alpha:exchange_steps_service_kt_jvm_grpc",
    ],
)
